<resources>

    <string name="app_name">TiendApp</string>


    <!--Home -->
    <string name="btn_see_more">Ver más</string>


    <!-- Action bar -->
    <string name="filter_action">Filtrar</string>
    <string name="sort_action">Ordenar</string>
    <string name="list_view_action">Lista</string>
    <string name="grid_view_action">Grilla</string>
    <string name="share_action">Compartir</string>
    <string name="search_action">Buscar</string>
    <string name="search_hint">Buscar...</string>
    <string name="search_result">Resultados</string>


    <!-- Navigation Drawer Stuff -->
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>
    <string name="drawer_option_home">Inicio</string>
    <string name="drawer_option_men">Hombres</string>
    <string name="drawer_option_women">Mujeres</string>
    <string name="drawer_option_kids">Infantiles</string>
    <string name="drawer_option_babies">Bebes</string>
    <string name="drawer_option_orders">Mis pedidos</string>
    <string name="drawer_option_settings">Configuración</string>
    <string name="drawer_option_login">Iniciar Sesión</string>
    <string name="drawer_option_logout">Cerrar Sesión</string>

    <!-- Categories Fixed Tabs Stuff -->
    <string name="categories_tab_1">Categorías</string>
    <string name="categories_tab_2">Novedades</string>
    <string name="categories_tab_3">Ofertas</string>

    <!-- Sub Categories Fixed Tabs Stuff -->
    <string name="sub_categories_tab_1">Sub-Categorías</string>
    <string name="sub_categories_tab_2">Novedades</string>
    <string name="sub_categories_tab_3">Ofertas</string>


    <!-- Products - Fixed Tabs Stuff  -->
    <string name="tab_1_pro">General</string>
    <string name="tab_2_pro">Detalles</string>



    <!--Genders and Ages -->
    <string name="gender_men">Hombres</string>
    <string name="gender_women">Mujeres</string>
    <string name="gender_kids">Infantiles</string>
    <string name="gender_babies">Bebes</string>


    <!-- Sale & New-in's -->
    <string name="sale">Ofertas</string>
    <string name="new_ins">Novedades</string>

    <!-- Categories Layout -->
    <string name="categories_title">Categorías</string>
    <string name="all_in">Todo en</string>



    <!-- Products - Layout  -->
    <string name="prod_title">Titulo</string>
    <string name="prod_brand">Marca</string>
    <string name="qty_abreviation">Cant.</string>
    <string name="add_to_shopping_bag">AGREGAR AL CARRITO</string>
    <string name="prod_age">Edad</string>
    <string name="prod_sex">Género</string>
    <string name="prod_color">Color</string>
    <string name="prod_material">Material</string>
    <string name="prod_style">Estilo</string>
    <string name="prod_occasion">Ocasión</string>
    <string name="prod_sizes_disp">Talles disponibles</string>
    <string name="prod_price">Precio</string>




    <!--Orders-->
    <string name="order_activity_name">Mis Pedidos</string>
    <string name="order">Pedido</string>
    <string name="order_state">Estado</string>
    <string name="order_buying_date">Fecha de compra</string>
    <string name="order_total">Total</string>
    <string name="order_details">Detalles</string>
    
    <string name="order_created">Creada</string>
    <string name="order_confirmed">Confirmada</string>
    <string name="order_shiped">Despachada</string>
    <string name="order_delivered">Entregada</string>
    <string name="must_login">Debe iniciar sesión para ver sus ordenes</string>

    <string name="no_disponible">No Disponible</string>
    <string name="added_to_cart">Agregado al Carrito</string>
    <string name="added_to_favorites">Agregado a Favoritos</string>


    


    <!-- Alarm management -->
    <string name="set_single_alarm">Set Single Alarm</string>
    <string name="set_repeating_alarm">Set Repeating Alarm</string>
    <string name="set_inexact_repeating_alarm">Set Inexact Repeating Alarm</string>
    <string name="cancel_repeating_alarm">Cancel Repeating Alarm</string>


    <!--filters -->
    <string name="section_filter">Sección</string>
    <string name="category_filter">Categoría</string>
    <string name="sub_category_filter">Sub-Categoría</string>
    <string name="brand_filter">Marca</string>
    <string name="color_filter">Color</string>
    <string name="size_filter">Talle</string>
    <string name="occasion_filter">Ocasión</string>
    <string name="recommended_filter">Recomendados</string>
    <string name="on_sale_filter">En oferta</string>

    <string name="all_male">Todos</string>
    <string name="all_female">Todss</string>

    <!--buttons-->
    <string name="cancel_button">Cancelar</string>
    <string name="ok_button">Aceptar</string>


    <!-- Languages -->
    <string name="btn_en">Ingles</string>
    <string name="btn_es">Español</string>
    <string name="btn_sv">Sueco</string>
    <string name="hello_world">Hola</string>
    <string name="languages">Idiomas</string>
    <string name="settings">Ajustes</string>

    <!-- Util Stuff -->
    <string name="loading_message">Cargando</string>


    <!-- Strings related to login -->
    <string name="title_activity_login">Ingresar</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">Usuario inválido</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Se requieren permisos para acceder a sus contactos
        para activar la funcionalidad de auto completar"</string>


    <!-- Carrito -->
    <string name="title_activity_carrito">Carrito</string>
    <string name="payment">Pago</string>
    <string name="payment_card">Visa</string>
    <string name="payment_card_nr">XXXX-XXXX-XXXX-1234</string>
    <string name="valid_to">Vencimiento: 09-18</string>
    <string name="products_cart">Productos</string>
    <string name="prod_title1">prod_title1</string>
    <string name="number_of_items1">number_of_items1</string>
    <string name="price_cart1">price_cart1</string>
    <string name="prod_title2">prod_title2</string>
    <string name="number_of_items2">number_of_items2</string>
    <string name="price_cart2">price_cart2</string>




</resources>
