<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/search_action"
        android:id="@+id/tool_bar_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="1"
        app:showAsAction="always"

        />


    <item
        android:title="@string/filter_action"
        android:id="@+id/filter_action"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"

        />
    <item
        android:title="@string/sort_action"
        android:id="@+id/sort_action"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"

        />

    <item
        android:title="@string/list_view_action"
        android:id="@+id/list_view_action"
        android:icon="@drawable/ic_view_list_white_24dp"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"

        />



    <item
        android:title="@string/grid_view_action"
        android:id="@+id/grid_view_action"
        android:icon="@drawable/ic_view_module_white_24dp"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"

        />


</menu>