<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".SettingsActivity"
    android:id="@+id/settings_layout">
    <!--
        <include
            layout="@layout/tool_bar"/>-->

    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:textColor="#000000"
        />

    <TextView
        android:id="@+id/languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/languages"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:textColor="#000000"
    />


    <Button
        android:id="@+id/btn_en"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_en"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="2dp" />

    <Button
        android:id="@+id/btn_es"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_es"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <!--TextView
        android:id="@+id/txt_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello_world"
        android:layout_weight="0.08" /-->


</LinearLayout>
